[package]
name = "velium"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
lazy_static = "1.4.0"
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-shell = "2.0.0-alpha"
serde_json = "1.0"
serde = "1.0"
veilid-core = { git = "https://gitlab.com/veilid/veilid.git", branch = "main" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4.14"
tokio = "1.35.1"
flume = "0.11"
thiserror = "1.0.0"
schemars = "0.8.16"
md5 = "0.7.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
